# Object-Oriented-Programming-Year1

./: .gitignore  README.md
Code_Revision/: Observer.h  Repo.h  Service.cpp  Service.h  Table.h  main.cpp
Fixing_Issues/: Domain.h  Repository.h  Service.h  Table.cpp  Window.cpp  issues.txt  test.cpp
Genes/: CMakeLists.txt  Repo.cpp  Repo.h  Service.cpp  Service.h  UI.cpp  UI.h  domain.cpp  domain.h  main.cpp
Lab1/: src.vcxproj  src.vcxproj.filters
Lab1/Debug/: src.vcxproj.FileListAbsolute.txt  vc142.idb
Lab1/Debug/src.tlog/: link.write.1.tlog  src.lastbuildstate
LabWork10/: A10.cpp  A10.h  A10.qrc  A10.sln  A10.ui  A10.vcxproj  A10.vcxproj.filters  EventsTableModel.cpp  EventsTableModel.h  Events_list.txt  GUI.cpp  GUI.h  MyDelegate.cpp  MyDelegate.h  User_list.txt  addoperation.h  database_repo.h  date.cpp  deloperation.h  domain.cpp  domain.h  example.csv  file_repo.h  main.cpp  operation.h  repo.h  service.cpp  service.h  store.h  store_html.cpp  store_html.h  tests.cpp  tests.h  updateoperation.h
LabWork10/x64/Debug/: A10.vcxproj.FileListAbsolute.txt
LabWork10/x64/Debug/A10.tlog/: A10.lastbuildstate  A10.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
LabWork10/x64/Debug/moc/: moc_EventsTable.cpp  moc_MyDelegate.cpp
LabWork10/x64/Release/A10.tlog/: A10.write.1u.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
LabWork45/src/: date.cpp  date.h  domain.cpp  dynamicArray.cpp  main.cpp  service.h
LabWork67/: CMakeLists.txt  Events_list.txt  User_list.txt  example.csv  example.html
LabWork67/src/: Exception.h  main.cpp  tests.cpp
LabWork67/src/Interface/: ui.cpp  ui.h
LabWork67/src/Repository/: repo.h
LabWork67/src/Service/: service.cpp  service.h
LabWork67/src/Store/: store.h  store_csv.cpp  store_csv.h  store_html.cpp  store_html.h
LabWork67/src/domain/: date.cpp  date.h  domain.cpp
LabWork89/: User_list.txt  events_database.db  example.csv
LabWork89/LifeAfterSchool/: GUI.h  LifeAfterSchool.cpp  LifeAfterSchool.h  LifeAfterSchool.ui  LifeAfterSchool.vcxproj  LifeAfterSchool.vcxproj.filters  example.html
LabWork89/LifeAfterSchool/Repository/: repo.h
LabWork89/LifeAfterSchool/Service/: service.cpp  service.h
LabWork89/LifeAfterSchool/Store/: store_csv.cpp
LabWork89/LifeAfterSchool/domain/: date.cpp
Life after School/: CMakeLists.txt  event_list.txt  events2.txt
Life after School/src/: Events.txt  domain.h  dynamicArray.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h  src.sln  src.vcxproj  src.vcxproj.filters  tests.cpp  ui.cpp  ui.h
Life after School/src/Debug/: src.ilk  src.vcxproj.FileListAbsolute.txt  vc142.idb
Life after School/src/Debug/src.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  src.lastbuildstate
LifeAfterSchoolV2/: CMakeLists.txt  Events_list.txt  LifeAfterSchool.sln  example.html  user_database.db
LifeAfterSchoolV2/LifeAfterSchool/: GUI.cpp  LifeAfterSchool.vcxproj  LifeAfterSchool.vcxproj.filters  configuration.txt  main.cpp  tests.cpp
LifeAfterSchoolV2/LifeAfterSchool/Repository/: database_repo.h  file_repo.h
LifeAfterSchoolV2/LifeAfterSchool/Store/: store.h  store_csv.h
LifeAfterSchoolV2/LifeAfterSchool/domain/: date.h  domain.cpp
LifeAfterSchoolV2/LifeAfterSchool/x64/Debug/LifeAfterSchool.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LifeAfterSchool.lastbuildstate  LifeAfterSchool.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog
LifeAfterSchoolV2/LifeAfterSchool/x64/Debug/moc/: moc_GUI.cpp
LifeAfterSchoolV2/LifeAfterSchool/x64/Debug/qmake/temp/: ABF75FC7-6B3D-475D-BBA8-D17166F9B6C1.LifeAfterSchool.designtime.idx  qtvars_x64_Debug.props
LifeAfterSchoolV2/LifeAfterSchool/x64/Release/LifeAfterSchool.tlog/: rcc.write.1u.tlog  uic.write.1u.tlog
LifeAfterSchoolV2/LifeAfterSchool/x64/Release/qmake/temp/: ABF75FC7-6B3D-475D-BBA8-D17166F9B6C1.LifeAfterSchool.designtime.idx  Makefile
LifeAfterSchoolV2/x64/Debug/: LifeAfterSchool.ilk
Object Oriented Programming/Lab1/: main.c  src.sln
Object Oriented Programming/Lab1/Debug/: src.ilk
Object Oriented Programming/Pharmacy/src/: Project1.vcxproj  domain.c  domain.h  dynamicArray.h  main.c  repo.h  stack.c  stack.h  tests.c  ui.h
Observer-ChatApp/: CMakeLists.txt  ChatSesssion.h  ChatWindow.cpp  ChatWindow.h  Observers.h  README.md  UserMessage.h  main.cpp
Pharmacy/src/: Project1.sln  Project1.vcxproj.filters  dynamicArray.c  main.c  repo.c  service.c  service.h  tests.h  ui.c  undo.c  undo.h
Pharmacy/src/Debug/: Project1.ilk  vc142.idb
PracticalExamProject/: CMakeLists.txt  Observer.h  ProgWindow.cpp  ProgWindow.h  README.md  Repo.cpp  Service.h  Statistics.cpp  Statistics.h  Table.cpp  domain.h  main.cpp  programmers.txt  sourcefile.txt
PracticalExample/: CMakeLists.txt  Observer.h  Repository.cpp  Table.h  Window.h  issues.txt  main.cpp  test.h  users.txt
Star-Catalogue/: CMakeLists.txt  Observer.h  Repository.cpp  Repository.h  Table.cpp  Table.h  ViewWindow.cpp  ViewWindow.h  Window.cpp  Window.h  astronomers.txt  domain.h  main.cpp  service.h  stars.txt
Weather/testweek13/: GUI.cpp  GUI.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Weather.h  main.cpp  testweek13.cpp  testweek13.h  testweek13.qrc  testweek13.sln  testweek13.ui  testweek13.vcxproj  testweek13.vcxproj.filters
(+71 files in other folders)
